# Game

./: .gitattributes  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  TUTORIAL.md  build.rs  issues.txt  rustfmt.toml
crates/attacking/: Cargo.toml
crates/attacking/src/: attack.rs  beam.rs  laser.rs  lib.rs  sightline.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  music.rs  spatial.rs
crates/behaviour/: Cargo.toml
crates/behaviour/src/: attack.rs  chase.rs  lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs  distance.rs  lib.rs  skybox.rs
crates/combat/: Cargo.toml
crates/combat/src/: attack.rs  health.rs  laser.rs  lib.rs  sightline.rs  trail.rs
crates/conf/: Cargo.toml
crates/conf/macros/: Cargo.toml
crates/conf/macros/src/: lib.rs
crates/conf/macros/tests/: test_macro.rs
crates/conf/src/: conf.rs  io.rs  lib.rs  macros.rs  persisted.rs  plugin.rs
crates/conf/tests/: conf.yaml
crates/connector/: Cargo.toml
crates/connector/src/: clients.rs  game.rs  lib.rs  main.rs  server.rs
crates/connector/src/game/: buffer.rs  ereceiver.rs  greceiver.rs  message.rs  mod.rs  mreceiver.rs  preceiver.rs  state.rs
crates/connector/tests/: commands.rs  integration.rs  network.rs
crates/connector/tests/common/: mod.rs
crates/construction/: Cargo.toml
crates/construction/src/: lib.rs  manufacturing.rs
crates/controller/: Cargo.toml
crates/controller/src/: actions.rs  areaselect.rs  command.rs  draft.rs  dragselect.rs  frustum.rs  hud.rs  hud_components.rs  hud_interaction.rs  interaction.rs  keyboard.rs  lib.rs  mouse.rs  pointer.rs  ray.rs  selection.rs  window.rs
crates/controller/src/commands/: executor.rs  handlers.rs  keyboard.rs  mod.rs
crates/controller/src/hud/: actionbar.rs  details.rs  interaction.rs  menu.rs  mod.rs  panel.rs  selection.rs
crates/controller/src/mouse/: input.rs  mod.rs  pointer.rs
crates/controller/src/selection/: area.rs  bookkeeping.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  baseset.rs  cleanup.rs  errors.rs  events.rs  flags.rs  frustum.rs  fs.rs  gamestate.rs  gconfig.rs  gresult.rs  lib.rs  objects.rs  player.rs  projection.rs  schedule.rs  screengeom.rs  stages.rs  state.rs  transition.rs  utils.rs  vecord.rs  visibility.rs
crates/energy/: Cargo.toml
crates/energy/benches/: nearby.rs
crates/energy/src/: battery.rs  graph.rs  lib.rs
crates/energy/src/battery/: component.rs  mod.rs  systems.rs
crates/game/: Cargo.toml
crates/game/benches/: ray_intersection.rs
crates/game/src/: lib.rs
crates/game/src/game/: camera.rs  collisions.rs  command.rs  mapdescr.rs  maploader.rs  mod.rs  movement.rs  pointer.rs  selection.rs  spawner.rs  terrain.rs  tree.rs
crates/game/src/math/: mod.rs  ray.rs
crates/game/test_data/: .gitattributes  test-map.tar
crates/gui/: Cargo.toml
crates/gui/src/: body_text.rs  button.rs  commands.rs  focus.rs  label.rs  lib.rs  style.rs  text.rs  textbox.rs  toast.rs
crates/hud/: Cargo.toml
crates/hud/src/: lib.rs  plugin.rs
crates/index/: Cargo.toml
crates/index/benches/: ray.rs
crates/index/src/: aabb.rs  collider.rs  grid.rs  index.rs  lib.rs  range.rs  segment.rs  shape.rs  systems.rs
crates/index/src/point/: grid.rs  mod.rs  subdivision.rs  tree.rs
crates/index/src/precise/: aabb.rs  collider.rs  grid.rs  index.rs  mod.rs  range.rs  segment.rs
crates/index/test_data/: 1000-points.txt  10000-points.txt
crates/input/: Cargo.toml
crates/input/src/: io.rs  key.rs  lib.rs  plugin.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs  map.rs  map_select.rs  readiness.rs
crates/lobby/: Cargo.toml  README.md
crates/lobby/src/: conf.rs  db.rs  main.rs
crates/lobby/src/auth/: db.rs  endpoints.rs  init.sql  middleware.rs  mod.rs  model.rs  passwd.rs  token.rs
crates/lobby/src/games/: a.sql  b.sql  db.rs  endpoints.rs  init-a.sql  init-b.sql  init.sql  mod.rs  model.rs
crates/lobby_client/: Cargo.toml
crates/lobby_client/src/: client.rs  endpoints.rs  lib.rs  plugin.rs  requestable.rs  systems.rs
crates/lobby_model/: Cargo.toml
crates/lobby_model/src/: auth.rs  games.rs  lib.rs  validation.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs  setup.rs
crates/map/: Cargo.toml
crates/map/src/: content.rs  description.rs  hash.rs  io.rs  lib.rs  map.rs  meta.rs  placement.rs  size.rs
crates/map/tests/: .gitattributes  test-map.dem.tar
crates/menu/: Cargo.toml
crates/menu/src/: aftergame.rs  create.rs  gamelisting.rs  lib.rs  mainmenu.rs  mapselection.rs  menu.rs  requests.rs  signin.rs  singleplayer.rs
crates/menu/src/multiplayer/: create.rs  current.rs  gamelisting.rs  joined.rs  joining.rs  mod.rs  requests.rs  setup.rs  signin.rs
crates/messages/: Cargo.toml
crates/messages/src/: game.rs  lib.rs  server.rs
crates/messages/src/players/: chat.rs  entity.rs  (+4 more)
crates/movement/: Cargo.toml
crates/movement/src/: altitude.rs  cache.rs  disc.rs  kinematics.rs  lib.rs  movement.rs  obstacles.rs  pathing.rs  repulsion.rs  syncing.rs  systems.rs
crates/multiplayer/: Cargo.toml
crates/multiplayer/src/: config.rs  game.rs  lib.rs  lifecycle.rs  messages.rs  netstate.rs  network.rs  playermsg.rs  stats.rs
crates/net/: Cargo.toml
crates/net/src/: accounting.rs  buffer.rs  communicator.rs  confirmbuf.rs  databuf.rs  header.rs  io.rs  lib.rs  messages.rs  msg.rs  net.rs  network.rs  processor.rs  protocol.rs  record.rs  reliability.rs  resend.rs  socket.rs
crates/objects/: Cargo.toml
crates/objects/src/: cache.rs  cannon.rs  collection.rs  collider.rs  factory.rs  flight.rs  health.rs  ichnography.rs  lib.rs  loader.rs  names.rs  scenes.rs  solids.rs  spawner.rs
crates/pathing/: Cargo.toml
crates/pathing/benches/: pathing.rs
crates/pathing/src/: chain.rs  dijkstra.rs  exclusion.rs  finder.rs  fplugin.rs  funnel.rs  geometry.rs  graph.rs  interval.rs  lib.rs  node.rs  path.rs  polyanya.rs  pplugin.rs  query.rs  segmentproj.rs  syncing.rs  systems.rs  triangulation.rs  utils.rs
crates/pathing/test_data/: 100000-points.txt
(+252 files in other folders)
