[package]
name = "de_game"
readme = "README.md"
description = "Digital Extinction (DE) is a 3D real-time strategy (RTS) game build with Bevy."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[profile.release]
lto = true

[profile.testing]
inherits = "release"
opt-level = 2
lto = false
debug = true
debug-assertions = true
overflow-checks = true

[profile.testing.package."*"]
opt-level = 3

[dependencies]
# DE
de_behaviour.workspace = true
de_camera.workspace = true
de_combat.workspace = true
de_controller.workspace = true
de_core.workspace = true
de_index.workspace = true
de_loader.workspace = true
de_menu.workspace = true
de_movement.workspace = true
de_objects.workspace = true
de_pathing.workspace = true
de_signs.workspace = true
de_spawner.workspace = true
de_terrain.workspace = true
de_ui.workspace = true

# Other
bevy.workspace = true
iyes_loopless.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0-dev"

edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/DigitalExtinction/Game"
keywords = ["DigitalExtinction", "gamedev", "game", "bevy", "3d"]
homepage = "https://de-game.org/"
license = "GPL-3.0"
categories = ["games"]

[workspace.dependencies]
# DE
de_behaviour = { path = "crates/behaviour", version = "0.1.0-dev" }
de_camera = { path = "crates/camera", version = "0.1.0-dev" }
de_combat = { path = "crates/combat", version = "0.1.0-dev" }
de_controller = { path = "crates/controller", version = "0.1.0-dev" }
de_core = { path = "crates/core", version = "0.1.0-dev" }
de_index = { path = "crates/index", version = "0.1.0-dev" }
de_loader = { path = "crates/loader", version = "0.1.0-dev" }
de_map = { path = "crates/map", version = "0.1.0-dev" }
de_menu = { path = "crates/menu", version = "0.1.0-dev" }
de_movement = { path = "crates/movement", version = "0.1.0-dev" }
de_objects = { path = "crates/objects", version = "0.1.0-dev" }
de_pathing = { path = "crates/pathing", version = "0.1.0-dev" }
de_signs = { path = "crates/signs", version = "0.1.0-dev" }
de_spawner = { path = "crates/spawner", version = "0.1.0-dev" }
de_terrain = { path = "crates/terrain", version = "0.1.0-dev" }
de_ui = { path = "crates/ui", version = "0.1.0-dev" }
de_uom = { path = "crates/uom", version = "0.1.0-dev" }

# Other
ahash = "0.7.6"
anyhow = "1.0"
approx = "0.5.1"
async-std = "1.11"
async-tar = "0.4.2"
bevy = "0.9"
clap = { version = "3.2.6", features = ["derive"] }
criterion = "0.4"
enum-map = "2.3.0"
futures-lite = "1.11"
glam = "0.22"
gltf = "1.0"
itertools = "0.10.5"
iyes_loopless = "0.9.1"
iyes_progress = { version = "0.7.1", features = [ "iyes_loopless" ] }
nalgebra = { version = "0.31.0", features = ["convert-glam022"] }
ntest = "0.8.0"
parry2d = "0.11.0"
parry3d = "0.11.0"
# Use released version once this
# https://github.com/georust/rstar/commit/923e73fc4dbee43ed43f2248eae6c4143e5282cc
# is released.
rstar = { git = "https://github.com/georust/rstar", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spade = "2.0.0"
thiserror = "1.0"
tinyvec = { version = "1.6.0", features = ["rustc_1_40", "alloc"] }
