[package]
name = "de_game"
readme = "README.md"
description = "Digital Extinction (DE) is a 3D real-time strategy (RTS) game build with Bevy."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[profile.release]
lto = true

[profile.testing]
inherits = "release"
opt-level = 2
lto = false
debug = true
debug-assertions = true
overflow-checks = true

[profile.testing.package."*"]
opt-level = 3

[dependencies]
# DE
de_behaviour.workspace = true
de_camera.workspace = true
de_combat.workspace = true
de_conf.workspace = true
de_construction.workspace = true
de_controller.workspace = true
de_core.workspace = true
de_gui.workspace = true
de_index.workspace = true
de_loader.workspace = true
de_lobby_client.workspace = true
de_log.workspace = true
de_menu.workspace = true
de_movement.workspace = true
de_objects.workspace = true
de_pathing.workspace = true
de_signs.workspace = true
de_spawner.workspace = true
de_terrain.workspace = true

# Other
bevy.workspace = true
tracing.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0-dev"

edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/DigitalExtinction/Game"
keywords = ["DigitalExtinction", "gamedev", "game", "bevy", "3d"]
homepage = "https://de-game.org/"
license = "GPL-3.0"
categories = ["games"]

[workspace.dependencies]
# DE
de_behaviour = { path = "crates/behaviour", version = "0.1.0-dev" }
de_camera = { path = "crates/camera", version = "0.1.0-dev" }
de_combat = { path = "crates/combat", version = "0.1.0-dev" }
de_conf = { path = "crates/conf", version = "0.1.0-dev" }
de_connector = { path = "crates/connector", version = "0.1.0-dev" }
de_construction = { path = "crates/construction", version = "0.1.0-dev" }
de_controller = { path = "crates/controller", version = "0.1.0-dev" }
de_core = { path = "crates/core", version = "0.1.0-dev" }
de_gui = { path = "crates/gui", version = "0.1.0-dev" }
de_index = { path = "crates/index", version = "0.1.0-dev" }
de_loader = { path = "crates/loader", version = "0.1.0-dev" }
de_lobby_client = { path = "crates/lobby_client", version = "0.1.0-dev" }
de_lobby_model = { path = "crates/lobby_model", version = "0.1.0-dev" }
de_log = { path = "crates/log", version = "0.1.0-dev" }
de_map = { path = "crates/map", version = "0.1.0-dev" }
de_menu = { path = "crates/menu", version = "0.1.0-dev" }
de_movement = { path = "crates/movement", version = "0.1.0-dev" }
de_net = { path = "crates/net", version = "0.1.0-dev" }
de_objects = { path = "crates/objects", version = "0.1.0-dev" }
de_pathing = { path = "crates/pathing", version = "0.1.0-dev" }
de_signs = { path = "crates/signs", version = "0.1.0-dev" }
de_spawner = { path = "crates/spawner", version = "0.1.0-dev" }
de_terrain = { path = "crates/terrain", version = "0.1.0-dev" }
de_uom = { path = "crates/uom", version = "0.1.0-dev" }

# Other
ahash = "0.7.6"
anyhow = "1.0"
approx = "0.5.1"
assert_cmd = "2.0.10"
async-compat = "0.2.1"
async-std = "1.11"
async-tar = "0.4.2"
bevy = "0.10"
chrono = "0.4.24"
clap = { version = "4.0", features = ["derive"] }
criterion = "0.4"
dirs = "4.0.0"
enum-iterator = "1.4.0"
enum-map = "2.3.0"
fern = "0.6.2"
flate2 = "1.0.26"
futures = "0.3.28"
futures-lite = "1.11"
glam = "0.23"
gltf = "1.0"
itertools = "0.10.5"
iyes_progress = "0.8.0"
log = "0.4.17"
nalgebra = { version = "0.32.2", features = ["convert-glam023"] }
nix = "0.26.2"
ntest = "0.9.0"
parry2d = "0.13.1"
parry3d = "0.13.1"
reqwest = { version = "0.11.13", features = ["json"] }
rstar = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha3 = "0.10.6"
spade = "2.0.0"
thiserror = "1.0"
tinyvec = { version = "1.6.0", features = ["rustc_1_40", "alloc"] }
tracing = "0.1.26"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17" }
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.2"
