[package]
name = "de_game"
readme = "README.md"
description = "Digital Extinction (DE) is a 3D real-time strategy (RTS) game build with Bevy."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[[bin]]
name = "de"
path = "src/main.rs"

[profile.lto]
inherits = "release"
lto = true

[profile.testing]
inherits = "release"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true

[profile.testing.package."*"]
opt-level = 3

[features]
godmode = ["de_spawner/godmode"]

[dependencies]
# DE
de_audio.workspace = true
de_behaviour.workspace = true
de_camera.workspace = true
de_combat.workspace = true
de_conf.workspace = true
de_construction.workspace = true
de_controller.workspace = true
de_core.workspace = true
de_energy.workspace = true
de_gui.workspace = true
de_index.workspace = true
de_loader.workspace = true
de_lobby_client.workspace = true
de_log.workspace = true
de_menu.workspace = true
de_movement.workspace = true
de_multiplayer.workspace = true
de_objects.workspace = true
de_pathing.workspace = true
de_signs.workspace = true
de_spawner.workspace = true
de_terrain.workspace = true

# Other
bevy.workspace = true
bevy_kira_audio.workspace = true
tracing.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0-dev"

edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/DigitalExtinction/Game"
keywords = ["DigitalExtinction", "gamedev", "game", "bevy", "3d"]
homepage = "https://de-game.org/"
license = "AGPL-3.0"
categories = ["games"]

[workspace.dependencies]
# DE
de_audio = { path = "crates/audio", version = "0.1.0-dev" }
de_behaviour = { path = "crates/behaviour", version = "0.1.0-dev" }
de_camera = { path = "crates/camera", version = "0.1.0-dev" }
de_combat = { path = "crates/combat", version = "0.1.0-dev" }
de_conf = { path = "crates/conf", version = "0.1.0-dev" }
de_connector = { path = "crates/connector", version = "0.1.0-dev" }
de_construction = { path = "crates/construction", version = "0.1.0-dev" }
de_controller = { path = "crates/controller", version = "0.1.0-dev" }
de_core = { path = "crates/core", version = "0.1.0-dev" }
de_energy = { path = "crates/energy", version = "0.1.0-dev" }
de_gui = { path = "crates/gui", version = "0.1.0-dev" }
de_index = { path = "crates/index", version = "0.1.0-dev" }
de_loader = { path = "crates/loader", version = "0.1.0-dev" }
de_lobby_client = { path = "crates/lobby_client", version = "0.1.0-dev" }
de_lobby_model = { path = "crates/lobby_model", version = "0.1.0-dev" }
de_log = { path = "crates/log", version = "0.1.0-dev" }
de_map = { path = "crates/map", version = "0.1.0-dev" }
de_menu = { path = "crates/menu", version = "0.1.0-dev" }
de_messages = { path = "crates/messages", version = "0.1.0-dev" }
de_movement = { path = "crates/movement", version = "0.1.0-dev" }
de_multiplayer = { path = "crates/multiplayer", version = "0.1.0-dev" }
de_net = { path = "crates/net", version = "0.1.0-dev" }
de_objects = { path = "crates/objects", version = "0.1.0-dev" }
de_pathing = { path = "crates/pathing", version = "0.1.0-dev" }
de_signs = { path = "crates/signs", version = "0.1.0-dev" }
de_spawner = { path = "crates/spawner", version = "0.1.0-dev" }
de_terrain = { path = "crates/terrain", version = "0.1.0-dev" }
de_types = { path = "crates/types", version = "0.1.0-dev" }
de_uom = { path = "crates/uom", version = "0.1.0-dev" }

# Other
ab_glyph = "0.2.21"
ahash = "0.8.3"
anyhow = "1.0"
approx = "0.5.1"
assert_cmd = "2.0.10"
async-compat = "0.2.1"
async-std = "1.11"
async-tar = "0.4.2"
bevy_kira_audio = { version = "0.16.0", features = ["mp3"] }
bincode = "2.0.0-rc.3"
chrono = "0.4.24"
clap = { version = "4.0", features = ["derive"] }
criterion = "0.5.1"
dirs = "5.0.0"
enum-iterator = "1.4.0"
enum-map = "2.3.0"
fastrand = "1.9.0"
fern = "0.6.2"
flate2 = "1.0.26"
futures = "0.3.28"
futures-lite = "1.13.0"
glam = "0.24"
gltf = "1.0"
itertools = "0.11.0"
iyes_progress = "0.9.0"
log = "0.4.17"
nalgebra = { version = "0.32.3", features = ["convert-glam024"] }
nix = "0.26.2"
ntest = "0.9.0"
parry2d = "0.13.1"
parry3d = "0.13.1"
paste = "1.0.12"
priority-queue = "1.3.0"
proc-macro2 = "1.0.63"
quote = "1.0.27"
reqwest = { version = "0.11.13", features = ["json"] }
rstar = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha3 = "0.10.6"
spade = "2.0.0"
syn = { version = "1.0.109", features = ["full"] }
thiserror = "1.0"
tinyvec = { version = "1.6.0", features = ["rustc_1_40", "alloc"] }
tracing = "0.1.26"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
trybuild = "1.0.80"
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.2"

[workspace.dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "filesystem_watcher",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
]
