[package]
name = "de_behaviour"
version = "0.1.0-dev"
edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/DigitalExtinction/Game"

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_objects = { path = "../objects", version = "0.1.0-dev" }
de_pathing = { path = "../pathing", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
glam = "0.21"
parry3d = "0.9.0"
