[package]
name = "de_behaviour"
description = "Digital Extinction unit level behaviour and AI."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_objects = { path = "../objects", version = "0.1.0-dev" }
de_pathing = { path = "../pathing", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
glam = "0.21"
parry3d = "0.9.0"
