[package]
name = "de_camera"
description = "Camera related functionality in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_uom = { path = "../uom", version = "0.1.0-dev" }
de_core = { path = "../core", version = "0.1.0-dev" }
de_map = { path = "../map", version = "0.1.0-dev" }
de_terrain = { path = "../terrain", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
parry3d = "0.9.0"
