[package]
name = "de_combat"
description = "Attacking, projectile & laser simulation and similar in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_objects = { path = "../objects", version = "0.1.0-dev" }
de_terrain = { path = "../terrain", version = "0.1.0-dev" }
de_index = { path = "../index", version = "0.1.0-dev" }
de_spawner = { path = "../spawner", version = "0.1.0-dev" }
de_behaviour = { path = "../behaviour", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
glam = "0.21"
parry3d = "0.9.0"
