[package]
name = "de_connector"
description = "Digital Extinction multiplayer server."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[lib]
name = "de_connector_lib" 

[[bin]]
name = "de_connector" 

[dependencies]
# DE
de_net.workspace = true

# Other
ahash.workspace = true
anyhow.workspace = true
async-std.workspace = true
bincode.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
nix.workspace = true
ntest.workspace = true
