[package]
name = "de_construction"
description = "Functionality related to manufacturing and construction in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_audio.workspace = true
de_core.workspace = true
de_index.workspace = true
de_objects.workspace = true
de_pathing.workspace = true
de_signs.workspace = true
de_spawner.workspace = true

# Other
ahash.workspace = true
bevy.workspace = true
bevy_kira_audio.workspace = true
iyes_progress.workspace = true
parry2d.workspace = true
parry3d.workspace = true
