[package]
name = "de_controller"
description = "Handling of user input in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core.workspace = true
de_objects.workspace = true
de_index.workspace = true
de_terrain.workspace = true
de_pathing.workspace = true
de_spawner.workspace = true
de_behaviour.workspace = true
de_combat.workspace = true
de_ui.workspace = true

# Other
bevy.workspace = true
iyes_loopless.workspace = true
glam.workspace = true
parry3d.workspace = true
enum-map.workspace = true
ahash.workspace = true
