[package]
name = "de_core"
description = "Various simple core utilities, structs, and so on for Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
bevy.workspace = true
enum-iterator.workspace = true
enum-map.workspace = true
glam.workspace = true
iyes_progress.workspace = true
nalgebra.workspace = true
parry2d.workspace = true
parry3d.workspace = true
serde.workspace = true
