[package]
name = "de_energy"
description = "Digital Extinction energy systems."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
de_core.workspace = true
smallvec.workspace = true
de_index.workspace = true
parry3d.workspace = true

bevy_prototype_debug_lines.workspace = true