[package]
name = "de_energy"
description = "Digital Extinction energy systems."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graph_debug_lines = ["dep:bevy_prototype_debug_lines"]

[dependencies]
# DE
de_core.workspace = true
de_index.workspace = true
de_spawner.workspace = true

# Other
bevy.workspace = true
parry3d.workspace = true
tinyvec.workspace = true

# This cannot be a workspace dependency because it is optional
bevy_prototype_debug_lines = { version="0.11", features = ["3d"], optional = true }

[dev-dependencies]
# DE
de_objects.workspace = true
de_test_utils.workspace = true

# Other
criterion.workspace = true
fastrand.workspace = true

[[bench]]
name = "nearby"
harness = false