[package]
name = "de_energy"
description = "Digital Extinction energy systems."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core.workspace = true
de_index.workspace = true
de_spawner.workspace = true
de_types.workspace = true

# Other
bevy.workspace = true
parry3d.workspace = true
tinyvec.workspace = true

[dev-dependencies]
# DE
de_objects.workspace = true
de_test_utils.workspace = true

# Other
criterion.workspace = true
fastrand.workspace = true

[[bench]]
name = "nearby"
harness = false
