[package]
name = "de_game"
version = "0.1.0-dev"
edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/Indy2222/Digital-Extinction"

[dependencies]
de_core = { path = "../core", version = "0.1.0-dev" }
de_map = { path = "../map", version = "0.1.0-dev" }
bevy = "0.7"
iyes_loopless = "0.5.1"
anyhow = "^1.0"
tar = "0.4"
serde = "1.0"
serde_json = "1.0"
glam = "^0.20.2"
depacked = "0.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ray_intersection"
harness = false

[[bench]]
name = "tree"
harness = false
