[package]
name = "de_index"
description = "Spatial index of all solid entities in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_objects = { path = "../objects", version = "0.1.0-dev" }

# Other
bevy = "0.8"
glam = "0.21"
iyes_loopless = "0.7"
parry3d = "0.9.0"
parry2d = { git = "https://github.com/Indy2222/parry", branch = "feature/dilation" }
ahash = "0.7.6"
nalgebra = { version = "0.31.0", features = ["convert-glam021"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ray"
harness = false
