[package]
name = "de_index"
description = "Spatial index of all solid entities in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core.workspace = true
de_objects.workspace = true
de_types.workspace = true

# Other
ahash.workspace = true
bevy.workspace = true
glam.workspace = true
kiddo.workspace = true
nalgebra.workspace = true
parry2d.workspace = true
parry3d.workspace = true

[dev-dependencies]
# DE
de_test_utils.workspace = true

# Other
criterion.workspace = true

[[bench]]
name = "ray"
harness = false
