[package]
name = "de_loader"
version = "0.1.0-dev"
edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/DigitalExtinction/Game"
keywords = ["DigitalExtinction", "gamedev", "game", "bevy", "3d"]
homepage = "https://de-game.org/"
description = "Map loading logic in Digital Extinction."
license = "GPL-3.0"
categories = ["games"]

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_map = { path = "../map", version = "0.1.0-dev" }
de_terrain = { path = "../terrain", version = "0.1.0-dev" }
de_spawner = { path = "../spawner", version = "0.1.0-dev" }
de_camera = { path = "../camera", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
iyes_progress = { version = "0.4", features = [ "iyes_loopless" ] }
futures-lite = "1.11"
