[package]
name = "de_loader"
description = "Map loading logic in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_map = { path = "../map", version = "0.1.0-dev" }
de_terrain = { path = "../terrain", version = "0.1.0-dev" }
de_spawner = { path = "../spawner", version = "0.1.0-dev" }
de_camera = { path = "../camera", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
iyes_progress = { version = "0.4", features = [ "iyes_loopless" ] }
futures-lite = "1.11"
