[package]
name = "de_map"
version = "0.1.0-dev"
edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/DigitalExtinction/Game"

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }

# other
bevy = "0.8"
glam = "0.21"
parry2d = { git = "https://github.com/Indy2222/parry", branch = "feature/dilation" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
async-std = { version = "1.11", features = ["default", "unstable", "attributes"] }
async-tar = "0.4.2"

[dev-dependencies]
tempfile = "3.3"
