[package]
name = "de_map"
description = "Digital Extinction map (de)serialization, validation and representation functionalities."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }

# other
bevy = "0.8"
glam = "0.21"
parry2d = { git = "https://github.com/Indy2222/parry", branch = "feature/dilation" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
async-std = { version = "1.11", features = ["default", "unstable", "attributes"] }
async-tar = "0.4.2"
ahash = "0.7.6"

[dev-dependencies]
tempfile = "3.3"
